development/example-some-website/front.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: development
  name: mywebsite-front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mywebsite-front
  template:
    metadata:
      labels:
        app: mywebsite-front
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: "development"
        kubernetes.io/os: linux
      containers:
        - name: web
          image: 074531296166.dkr.ecr.ap-southeast-1.amazonaws.com/mywebsite-front:dev
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          imagePullPolicy: Always
