development/example-some-website/api.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: development
  name: mywebsite-api
spec:
  selector:
    app: mywebsite-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
