development/example-some-website/front.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: development
  name: mywebsite-front
spec:
  selector:
    app: mywebsite-front
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
