development/example-some-website/panel.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: development
  name: mywebsite-back-office
spec:
  selector:
    app: mywebsite-back-office
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
