development/example-some-website/front.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: development
  name: mywebsite-front-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "dev.mywebsite.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mywebsite-front
            port:
              number: 80
