development/example-some-website/panel.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: development
  name: mywebsite-back-office-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "panel-dev.mywebsite.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mywebsite-back-office
            port: 
              number: 80
